--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
 	 <string name = "app_name">presentation</string>
+	 <string name = "something_went_wrong">Something went wrong at our end!</string>
+	 <string name = "retry">retry</string>
 </resources>
